removed empty cells and fixed timezone parameter in notebook 5

--- a/l4e_notebooks/2_dataset_creation.ipynb
+++ b/l4e_notebooks/2_dataset_creation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "97a4727e",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2fd01677",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -18,9 +20,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "be5e499a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 21.1.3; however, version 21.2.4 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/python3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "boto3 version: 1.18.28 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "!pip install --quiet sagemaker==2.46.1 tqdm==4.62.1\n",
     "\n",
@@ -34,6 +60,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5095c9b3",
    "metadata": {},
    "source": [
     "### Imports"
@@ -41,7 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "fef28b31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "ec139956",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,9 +107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "77d04cc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['centrifugal-pump']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# List of the directories from the training data \n",
     "# directory: each directory corresponds to a subsystem:\n",
@@ -95,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dce6637e",
    "metadata": {},
    "source": [
     "## Create a dataset\n",
@@ -103,6 +145,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "700efb03",
    "metadata": {},
    "source": [
     "### Create data schema"
@@ -110,6 +153,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fcb4b984",
    "metadata": {},
    "source": [
     "First we need to setup the schema of your dataset. In the cell below, we define `DATASET_COMPONENT_FIELDS_MAP`. `DATASET_COMPONENT_FIELDS_MAP` is a Python dictonary (hashmap). The key of each entry in the dictionary is the `Component` name, and the value of each entry is a list of column names. The column names must exactly match the header in your CSV files. The order of the column names also need to exactly match:\n",
@@ -155,7 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "b3897ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d9d0a843",
    "metadata": {},
    "source": [
     "If you wanted to use the console, the following string would be the one to use to configure the **dataset schema**:\n",
@@ -190,6 +236,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a9b3190a",
    "metadata": {},
    "source": [
     "### Create the dataset\n",
@@ -207,15 +254,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "642adebb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset \"f866f7a1-767b-4eca-a340-fa4ea4bdbba6\" already exists and can be used to ingest data or train a model.\n"
+     ]
+    }
+   ],
    "source": [
     "lookout_dataset.create()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "a4964129",
    "metadata": {},
    "source": [
     "The dataset is now created, but it is empty and ready to receive some timeseries data that we will ingest from the S3 location prepared in the previous notebook:"
@@ -223,6 +280,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "08c1cdf5",
    "metadata": {},
    "source": [
     "![Dataset created](assets/dataset-created.png)"
@@ -230,6 +288,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f49aa5f9",
    "metadata": {},
    "source": [
     "## Ingest data into a dataset\n",
@@ -239,15 +298,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "c39da942",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('arn:aws:iam::631071447677:role/LookoutForEquipmentSitewisePipeli-SageMakerIamRole-1G00GVH0Y5G4D',\n",
+       " 'l4ef866f-asset1-train-inference',\n",
+       " 'f866f7a1-767b-4eca-a340-fa4ea4bdbba6/training-data/',\n",
+       " 'f866f7a1-767b-4eca-a340-fa4ea4bdbba6')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ROLE_ARN, BUCKET, PREFIX, DATASET_NAME"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "add3da83",
    "metadata": {},
    "source": [
     "Launch the ingestion job in the Lookout for Equipment dataset: the following method encapsulates the [**StartDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_StartDataIngestionJob.html) API:\n",
@@ -268,7 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "5f7baba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,6 +353,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c2ea31a9",
    "metadata": {},
    "source": [
     "The ingestion is launched. With this amount of data (around 50 MB), it should take between less than 5 minutes:\n",
@@ -286,6 +363,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ed8edee",
    "metadata": {},
    "source": [
     "We use the following cell to monitor the ingestion process by calling the [**DescribeDataIngestionJob**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_DescribeDataIngestionJob.html) API every 60 seconds:"
@@ -293,9 +371,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "65e0cb7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=====Polling Data Ingestion Status=====\n",
+      "\n",
+      "2021-09-01 14:28:40 | IN_PROGRESS\n",
+      "2021-09-01 14:29:40 | IN_PROGRESS\n",
+      "2021-09-01 14:30:40 | IN_PROGRESS\n",
+      "2021-09-01 14:31:40 | IN_PROGRESS\n",
+      "2021-09-01 14:32:40 | SUCCESS\n",
+      "\n",
+      "=====End of Polling Data Ingestion Status=====\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the ingestion job ID and status:\n",
     "data_ingestion_job_id = response['JobId']\n",
@@ -317,6 +412,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe33f50e",
    "metadata": {},
    "source": [
     "In case any issue arise, you can inspect the API response available as a JSON document:"
@@ -324,15 +420,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "dbf06e26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'JobId': '0677c855c0409bb3f350d45d967c2beb',\n",
+       " 'DatasetArn': 'arn:aws:lookoutequipment:us-east-1:631071447677:dataset/f866f7a1-767b-4eca-a340-fa4ea4bdbba6/84d5640e-09f1-44a7-b99f-ae3bd993508e',\n",
+       " 'IngestionInputConfiguration': {'S3InputConfiguration': {'Bucket': 'l4ef866f-asset1-train-inference',\n",
+       "   'Prefix': 'f866f7a1-767b-4eca-a340-fa4ea4bdbba6/training-data/'}},\n",
+       " 'RoleArn': 'arn:aws:iam::631071447677:role/LookoutForEquipmentSitewisePipeli-SageMakerIamRole-1G00GVH0Y5G4D',\n",
+       " 'CreatedAt': datetime.datetime(2021, 9, 1, 14, 28, 40, 357000, tzinfo=tzlocal()),\n",
+       " 'Status': 'SUCCESS',\n",
+       " 'ResponseMetadata': {'RequestId': '06d56728-5cb2-4a91-a7b6-7d4d11fc6ce0',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '06d56728-5cb2-4a91-a7b6-7d4d11fc6ce0',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '508',\n",
+       "   'date': 'Wed, 01 Sep 2021 14:32:40 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lookout_client.describe_data_ingestion_job(JobId=data_ingestion_job_id)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "be122266",
    "metadata": {},
    "source": [
     "The ingestion should now be complete as can be seen in the console:\n",
@@ -342,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53250e26",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -350,9 +473,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "20b95add",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "<span style=\"color:green\"><span style=\"font-size:50px\">**Success!**</span></span>\n",
+       "<br/>\n",
+       "In this notebook, we created a **Lookout for Equipment dataset** and ingested the S3 data previously uploaded into this dataset. **Move now to the next notebook to train a model based on these data.**\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Needed for visualizing markdowns programatically\n",
     "from IPython.display import display, Markdown\n",
@@ -368,9 +508,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -382,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
