--- a/l4e_notebooks/3_model_training.ipynb
+++ b/l4e_notebooks/3_model_training.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9c95d596",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "016ec8a6",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -18,9 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "ec12fb40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "boto3 version: 1.18.28 (should be >= 1.17.48 to include Lookout for Equipment API)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>Jupyter.notebook.kernel.restart()</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import boto3\n",
     "print(f'boto3 version: {boto3.__version__} (should be >= 1.17.48 to include Lookout for Equipment API)')\n",
@@ -32,6 +56,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c21d66b5",
    "metadata": {},
    "source": [
     "### Imports"
@@ -39,7 +64,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "1e95c4df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "210c53d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5360fab1",
    "metadata": {},
    "source": [
     "Based on the label time ranges, we will use the following time ranges:\n",
@@ -80,9 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "da81c1f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Training period | from 2019-01-01 00:00:00 to 2019-07-31 00:00:00\n",
+      "Evaluation period | from 2019-08-01 00:00:00 to 2019-10-27 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# Configuring time ranges:\n",
     "training_start   = pd.to_datetime('2019-01-01 00:00:00')\n",
@@ -96,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f330f0ed",
    "metadata": {},
    "source": [
     "## Model training\n",
@@ -104,7 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "1d8e68e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,6 +174,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d998f80e",
    "metadata": {},
    "source": [
     "The following method encapsulates a call to the [**CreateModel**](https://docs.aws.amazon.com/lookout-for-equipment/latest/ug/API_CreateModel.html) API:"
@@ -141,9 +182,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "1251b2b6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ModelArn': 'arn:aws:lookoutequipment:us-east-1:631071447677:model/f866f7a1-767b-4eca-a340-fa4ea4bdbba6-model/9f147714-821a-4a03-9979-0bc8f4b2da5d',\n",
+       " 'Status': 'IN_PROGRESS',\n",
+       " 'ResponseMetadata': {'RequestId': '8809c7e1-8541-4d00-9781-f074b09ee488',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '8809c7e1-8541-4d00-9781-f074b09ee488',\n",
+       "   'content-type': 'application/x-amz-json-1.0',\n",
+       "   'content-length': '171',\n",
+       "   'date': 'Wed, 01 Sep 2021 14:35:42 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Actually create the model and train it:\n",
     "lookout_model.train()"
@@ -151,6 +212,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5ad047e",
    "metadata": {},
    "source": [
     "A training is now in progress as captured by the console:\n",
@@ -166,15 +228,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "c05f462c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-09-01 14:36:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:37:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:38:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:39:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:40:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:41:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:42:43 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:43:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:44:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:45:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:46:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:47:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:48:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:49:44 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:50:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:51:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:52:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:53:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:54:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:55:45 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:56:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:57:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:58:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 14:59:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:00:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:01:46 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:02:47 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:03:47 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:04:47 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:05:47 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:06:47 | Model training: IN_PROGRESS\n",
+      "2021-09-01 15:07:48 | Model training: SUCCESS\n"
+     ]
+    }
+   ],
    "source": [
     "lookout_model.poll_model_training(sleep_time=60)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "72826bd7",
    "metadata": {},
    "source": [
     "A model is now trained and we can visualize the results of the back testing on the evaluation window selected at the beginning on this notebook:\n",
@@ -184,6 +287,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6d74a328",
    "metadata": {},
    "source": [
     "In the console, **you can click on each detected event**: Amazon Lookout for Equipment unpacks the ranking and display the top sensors contributing to the detected events.\n",
@@ -195,6 +299,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0258218",
    "metadata": {},
    "source": [
     "This dataset contains 30 sensors:\n",
@@ -205,6 +310,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb2e3c3b",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -213,9 +319,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "46c335d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "<span style=\"color:green\"><span style=\"font-size:50px\">**Success!**</span></span>\n",
+       "<br/>\n",
+       "In this notebook, we use the dataset created in part 2 of this notebook series and trained an Amazon Lookout for Equipment model.\n",
+       "\n",
+       "From here you can either head:\n",
+       "* To the next notebook where we will **extract the evaluation data** for this model and use it to perform further analysis on the model results: this is optional and just gives you some pointers on how to post-process and visualize the data provided by Amazon Lookout for Equipment.\n",
+       "* Or to the **inference scheduling notebook** where we will start the model, feed it some new data and catch the results.\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Needed for visualizing markdowns programatically\n",
     "from IPython.display import display, Markdown\n",
@@ -235,9 +362,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
