removed hidden files inside l4e_notebooks dir

--- a/l4e_notebooks/5_inference_scheduling.ipynb
+++ b/l4e_notebooks/5_inference_scheduling.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "784876fa",
    "metadata": {},
    "source": [
     "# **Amazon Lookout for Equipment**\n",
@@ -10,6 +11,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "65a4c90a",
    "metadata": {},
    "source": [
     "### Notebook configuration update\n",
@@ -19,6 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab537b97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,6 +35,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9fe35512",
    "metadata": {},
    "source": [
     "### Imports"
@@ -40,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d45a2f6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8510aa4",
    "metadata": {},
    "source": [
     "### Parameters"
@@ -70,6 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eeebf887",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3528100",
    "metadata": {},
    "source": [
     "## Create an inference scheduler\n",
@@ -108,6 +116,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4f40808d",
    "metadata": {},
    "source": [
     "### Scheduler configuration\n",
@@ -128,6 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8cd098cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +155,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d0db9a2",
    "metadata": {},
    "source": [
     "#### Time zone parameter (optional)\n",
@@ -170,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7576c0e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +194,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75583a6a",
    "metadata": {},
    "source": [
     "#### Other optional parameters\n",
@@ -194,6 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19496ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,6 +218,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f0a5f508",
    "metadata": {},
    "source": [
     "### Create the inference scheduler\n",
@@ -213,6 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d3c6e1b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +256,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7509c0eb",
    "metadata": {},
    "source": [
     "Now, we can create the scheduler by running:\n",
@@ -256,6 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "953e6ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9aa500a",
    "metadata": {},
    "source": [
     "Our scheduler is now running and its inference history is currently empty:\n",
@@ -273,6 +292,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce916461",
    "metadata": {},
    "source": [
     "## Get inference results\n",
@@ -281,6 +301,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84989f25",
    "metadata": {},
    "source": [
     "### List inference executions"
@@ -288,6 +309,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1deea042",
    "metadata": {},
    "source": [
     "**Let's now wait for 5-15 minutes to give some time to the scheduler to run its first inferences.** Once the wait is over, we can use the ListInferenceExecution API for our current inference scheduler. The only mandatory parameter is the scheduler name.\n",
@@ -319,6 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca6564d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,6 +370,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cfd33dbe",
    "metadata": {},
    "source": [
     "We have configured this scheduler to run every five minutes. After at least 5 minutes we can also see the history in the console populated with its first few executions: after an hour or so, we will see that the last one failed as we only generated 10 files above and the scheduler did find the last one at the time it was fired:\n",
@@ -356,6 +380,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "827ef1d2",
    "metadata": {},
    "source": [
     "When the scheduler starts (for example at `datetime.datetime(2021, 1, 27, 9, 15)`, it looks for **a single** CSV file located in the input location with a filename that contains a timestamp set to the previous step. For example, a file named:\n",
@@ -368,6 +393,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f189cdc",
    "metadata": {},
    "source": [
     "### Download inference results\n",
@@ -381,6 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "569783c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,6 +416,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d19cdba7",
    "metadata": {},
    "source": [
     "When the `Status` key from the previous JSON result is set to `SUCCESS`, you can collect the results location in the `CustomerResultObject` field. We are now going to loop through each execution result and download each JSON lines files generated by the scheduler. Then we will insert their results into an overall dataframe for further analysis:"
@@ -397,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d4aee30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74a1493f",
    "metadata": {},
    "source": [
     "The content of each JSON lines file follows this format:\n",
@@ -464,6 +494,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03690e9a",
    "metadata": {},
    "source": [
     "### Visualizing the inference results\n",
@@ -474,6 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "468bca30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,6 +530,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9dc8521c",
    "metadata": {},
    "source": [
     "Each detected event have some detailed diagnostics. Let's unpack the details for the first event and plot a similar bar chart than what the console provides when it evaluates a trained model:"
@@ -506,6 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e0df2ffa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,6 +571,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85055d27",
    "metadata": {},
    "source": [
     "As we did in the previous notebook, the above bar chart is already of great help to pinpoint what might be going wrong with your asset. Let's load the initial tags description file we prepared in the first notebook and match the sensors with our initial components to group sensors by component:"
@@ -545,6 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "651296e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,6 +613,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "61e590a7",
    "metadata": {},
    "source": [
     "#### Multiple inferences analysis"
@@ -584,6 +621,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "85aeb6ac",
    "metadata": {},
    "source": [
     "We can also plot the contribution evolution for the top contributing signals over a period of time: the following graph gives an example of what a real time dashboard could look like to expose the results of an Amazon Lookout for Equipment scheduler.\n",
@@ -594,6 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e5df863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,6 +650,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff2042ea",
    "metadata": {},
    "source": [
     "The above plot is quite busy, let's filter on the signals that are, in average, **contributing the most** across this event and focus **only on the time range when something is happening**:"
@@ -619,6 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4beaa668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,6 +679,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db2da352",
    "metadata": {},
    "source": [
     "**As previously, let's agregate these sensor data at the component level:**"
@@ -646,6 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1fd7eb3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,6 +702,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1d37ae9",
    "metadata": {},
    "source": [
     "It looks like the pump is the first area where an anomaly is visible before each component becomes more balanced in the way they contribute to this detected event. However, the sensors associated to **the pump stays at the very high level** along this particular event which may call to a specific course of action:"
@@ -667,6 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c1b8cb36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,6 +724,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49b05bcb",
    "metadata": {},
    "source": [
     "## (Optional) Inference scheduler operations\n",
@@ -698,6 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e053256a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,6 +753,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d49e1e34",
    "metadata": {},
    "source": [
     "### Start an inference scheduler\n",
@@ -723,6 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c0e63c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,6 +780,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2adcf341",
    "metadata": {},
    "source": [
     "### Delete an inference scheduler\n",
@@ -748,6 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f38931ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,6 +808,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e00a226a",
    "metadata": {},
    "source": [
     "## Conclusion\n",
@@ -766,6 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e0301029",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,9 +838,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -799,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
